--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shawarma-shop",
   "version": "1.0.0",
   "description": "shawarma, kebab, doner",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
