--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.0",
+    "use-immer": "^0.9.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
