--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "qs": "^6.12.2",
@@ -19,6 +23,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.0",
+    "typescript": "^5.5.3",
     "use-immer": "^0.9.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
