--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.0",
-    "typescript": "^5.5.3",
+    "typescript": "^4.9.5",
     "use-immer": "^0.9.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "ahooks": "^3.8.0"
   }
 }
