--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "qs": "^6.12.2",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
     "react-content-loader": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
