--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "qs": "^6.12.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-content-loader": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
