--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-select": "^5.0.1",
     "axios": "^1.7.2",
     "axios-typescript": "^1.0.2",
     "dotenv": "^16.4.5",
@@ -20,11 +21,13 @@
     "react-bootstrap": "^2.10.4",
     "react-content-loader": "^7.0.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "sass": "^1.77.0",
     "typescript": "^4.9.5",
     "use-immer": "^0.9.0",
