--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-select": "^5.0.1",
     "axios": "^1.7.2",
     "axios-typescript": "^1.0.2",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "qs": "^6.12.2",
