--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios-typescript": "^1.0.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
+    "imask": "^7.6.1",
     "jwt-decode": "^4.0.0",
     "qs": "^6.12.2",
     "react": "^18.3.1",
