--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-uuid": "^2.0.0",
     "sass": "^1.77.0",
     "typescript": "^4.9.5",
     "use-immer": "^0.9.0",
