--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start-dev": "nodemon index.js",
-    "heroku-postbuild": "npm run build"
+    "start-dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
